fix a bug of scrollbar

--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -1,4 +1,4 @@
-body {
+.app {
     overflow: hidden;
-   
+    
 }
